--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/description"
         android:layout_gravity="center"
-        android:text="Title!"
+        android:text="description!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"/>
