--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+          android:name="com.example.aliciamaclennan.popflicks.MovieFragment$MovieDetail"
+          xmlns:tools="http://schemas.android.com/tools"
           android:layout_width="match_parent"
-          android:layout_height="match_parent">
-
+          android:layout_height="match_parent"
+          tools:context="com.example.aliciamaclennan.popflicks.MovieActivity"
+          android:id="@+id/popular">
 </fragment>
