--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,6 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#DA72BA</item>
         <item name="colorPrimaryDark">#9A72BA</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#DA72BA</item>
     </style>
 </resources>
