--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#9A72BA"
     tools:context=".MovieActivity">
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
     <GridView
         android:id="@+id/movie_list"
         android:layout_width="match_parent"
