--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,12 @@
     tools:context=".MovieActivity">
     <Spinner
         android:id="@+id/spinner"
+        android:prompt="@string/settings_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
     <GridView
         android:id="@+id/movie_list"
+        android:layout_below="@id/spinner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="auto_fit"/>
