--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
        <ImageView
            android:id="@+id/movie_thumbnail"
            android:src="@drawable/ic_pop_action"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_gravity="center"
+           android:layout_centerHorizontal="true"
            android:padding="16dp"/>
         <TextView
             android:id="@+id/title"
+            android:layout_below="@id/movie_thumbnail"
             android:textSize="24sp"
+            android:layout_centerHorizontal="true"
             android:textColor="#DA72BA"
             android:layout_gravity="center"
             android:text="Hello World!"
@@ -24,11 +23,10 @@
             android:padding="16dp"/>
         <TextView
             android:id="@+id/description"
-            android:layout_below="@+id/movie_headline"
+            android:layout_below="@+id/title"
+            android:layout_centerHorizontal="true"
             android:text="description!"
-            android:maxLines="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"/>
-   </LinearLayout>
 </RelativeLayout>
