--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                tools:context=".MovieActivity$MovieFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
         <ImageView
             android:id="@+id/movie_thumbnail"
             android:src="@drawable/ic_pop_action"
