--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-       <ImageView
-           android:id="@+id/movie_thumbnail"
-           android:src="@drawable/ic_pop_action"
-           android:layout_width="148dp"
-           android:layout_height="148dp"
-           android:layout_gravity="center"
-           android:layout_centerHorizontal="true"
-           android:padding="16dp"/>
+    android:fillViewport="true">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#9A72BA">
+        <ImageView
+            android:id="@+id/movie_thumbnail"
+            android:src="@drawable/ic_pop_action"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:padding="16dp"/>
         <TextView
             android:id="@+id/title"
             android:layout_below="@id/movie_thumbnail"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:layout_centerHorizontal="true"
             android:textColor="#DA72BA"
             android:layout_gravity="center"
             android:text="Hello World!"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"/>
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/release_date"
+            android:layout_below="@id/title"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
+            android:textColor="#DA72BA"
+            android:layout_gravity="center"
+            android:text="Hello World!"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/description"
-            android:layout_below="@+id/title"
+            android:layout_below="@+id/release_date"
             android:layout_centerHorizontal="true"
+            android:textSize="24sp"
             android:text="description!"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"/>
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
