--- a/app/src/main/res/layout/movie_detail.xml
+++ b/app/src/main/res/layout/movie_detail.xml
@@ -36,9 +36,38 @@
             android:text="Hello World!"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:id="@+id/vote"
+            android:layout_below="@+id/release_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#DA72BA"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_below="@id/release_date"
+                android:textSize="20sp"
+                android:text="@string/avg"
+                android:layout_weight="1"
+                android:textColor="#DA72BA"
+                android:layout_gravity="right"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="120dp"/>
+            <TextView
+                android:id="@+id/average_vote"
+                android:layout_below="@id/release_date"
+                android:textSize="20sp"
+                android:layout_weight="1"
+                android:layout_centerHorizontal="true"
+                android:textColor="#DA72BA"
+                android:layout_gravity="center"
+                android:text="Hello World!"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
         <TextView
             android:id="@+id/description"
-            android:layout_below="@+id/release_date"
+            android:layout_below="@+id/vote"
             android:layout_centerHorizontal="true"
             android:textSize="24sp"
             android:text="description!"
