--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#9A72BA"
-    tools:context=".MovieActivity">
+    tools:context=".MainActivity">
     <Spinner
         android:id="@+id/spinner"
         android:prompt="@string/settings_title"
