--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
-          tools:context="com.example.aliciamaclennan.popflicks.MovieActivity">
+          tools:context=".MainActivity">
         <item
             android:id="@+id/action_settings"
             android:title="@string/settings_menu_item"
